# sqlalchemy-engine-kit

./: .gitignore  .pypirc.template  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  DEPLOYMENT.md  EXAMPLES.md  LOGGING_AND_MONITORING.md  MIGRATION_GUIDE.md  OPTIONAL_DEPENDENCIES.md  PRODUCTION_READINESS_CHECKLIST.md  QUICKSTART.md  README.md  RUNBOOK.md
examples/: README.md  basic_usage.py  flask_integration.py  migration_example.py  transaction_example.py
src/sqlalchemy_engine_kit/: __init__.py
src/sqlalchemy_engine_kit/config/: __init__.py  database_config.py  database_type.py  engine_config.py  engine_config_presets.py  factories.py
src/sqlalchemy_engine_kit/core/: __init__.py  exceptions.py  logging.py
src/sqlalchemy_engine_kit/engine/: __init__.py  decorators.py  engine.py  manager.py
src/sqlalchemy_engine_kit/migrations/: __init__.py  commands.py  config.py  exceptions.py  manager.py  utils.py
src/sqlalchemy_engine_kit/models/: __init__.py  base.py  mixins.py  serialization.py
src/sqlalchemy_engine_kit/monitoring/: __init__.py  base.py  noop.py  prometheus.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_models.py
tests/integration/: __init__.py  test_complex_queries.py  test_connection_failure.py  test_custom_monitor.py  test_decorators.py  test_engine.py  test_manager.py  test_migrations.py  test_monitoring.py  test_performance.py  test_repositories.py  test_stress.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_models.py  test_query_builder.py
