[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-engine-kit"
version = "0.1.0"
description = "Production-ready SQLAlchemy toolkit for database session management, connection pooling, and common patterns"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "VidInsight Team", email = "info@vidinsight.com"}
]
maintainers = [
    {name = "VidInsight Team", email = "info@vidinsight.com"}
]
keywords = [
    "sqlalchemy",
    "database",
    "orm",
    "session-management",
    "connection-pooling",
    "migrations",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Framework :: SQLAlchemy",
]
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "pymysql>=1.0.0",
]
migrations = [
    "alembic>=1.12.0",
]
monitoring = [
    "prometheus-client>=0.18.0",
]
env = [
    "python-dotenv>=1.0.0",
]
all = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "alembic>=1.12.0",
    "prometheus-client>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vidinsight/sqlalchemy-engine-kit"
Documentation = "https://github.com/vidinsight/sqlalchemy-engine-kit/tree/main/docs"
Repository = "https://github.com/vidinsight/sqlalchemy-engine-kit"
Issues = "https://github.com/vidinsight/sqlalchemy-engine-kit/issues"
Changelog = "https://github.com/vidinsight/sqlalchemy-engine-kit/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlalchemy_engine_kit*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
sqlalchemy_engine_kit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100

